<resources>
    <!-- Nom utilisé dans l'application -->
    <string name="app_name">GohanMedic_ProjetMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GOHAN MEDIC</string>
    <string name="nav_header_subtitle">gohan-medic@info.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Produits</string>
    <string name="menu_ordonnance">Mes ordonnances</string>
    <string name="menu_preparation">Préparation</string>
    <string name="menu_rendezvous">Mes Rendez-vous</string>
    <string name="menu_panier">Mon Panier</string>
    <string name="menu_slideshow">Mon Profil</string>
    <string name="menu_commande">Mes commandes</string>
    <string name="menu_deconnexion">Déconnexion</string>
    <string name="menu_inscription">Inscription</string>
    <string name="bouton_valider">Valider</string>

    <!-- Strings related to login -->
    <string name="menu_seconnecter">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="adressepostal">Adresse</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sing_in_google">Se connecter avec google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Login incorrect</string>
    <string name="invalid_password">Le mot de passe > 5 carractères</string>
    <string name="login_failed">"Connexion échouée"</string>
</resources>