<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/ordonnance"
            android:icon="@drawable/ic_menu_ordonnance"
            android:title="@string/menu_ordonnance" />
        <item
            android:id="@+id/nav_preparation"
            android:icon="@drawable/ic_menu_preparation"
            android:title="@string/menu_preparation"/>
        <item
            android:id="@+id/nav_rendezvous"
            android:icon="@drawable/ic_menu_calendrier"
            android:title="@string/menu_rendezvous"/>
        <item
            android:id="@+id/nav_panier"
            android:icon="@drawable/ic_menu_panier"
            android:title="@string/menu_panier"/>
        <item
            android:id="@+id/nav_commande"
            android:icon="@drawable/ic_menu_commande"
            android:title="@string/menu_commande" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_deconnexion"
            android:icon="@drawable/ic_menu_deconnexion"
            android:title="@string/menu_deconnexion"/>
    </group>
</menu>